--- a/slides/2-data_wrangling.ipynb
+++ b/slides/2-data_wrangling.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "id": "0ceea5a6-c4bf-48f6-9644-d8d96b635abf",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "skip"
     },
@@ -3038,55 +3039,55 @@
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_23824_row0_col1, #T_23824_row1_col1 {\n",
+       "#T_fff20_row0_col1, #T_fff20_row1_col1 {\n",
        "  background-color: pink;\n",
        "}\n",
-       "#T_23824_row0_col2, #T_23824_row1_col2 {\n",
+       "#T_fff20_row0_col2, #T_fff20_row1_col2 {\n",
        "  background-color: skyblue;\n",
        "}\n",
-       "#T_23824_row0_col3, #T_23824_row1_col3 {\n",
+       "#T_fff20_row0_col3, #T_fff20_row1_col3 {\n",
        "  background-color: lightgreen;\n",
        "}\n",
-       "#T_23824_level0_col1 {\n",
+       "#T_fff20_level0_col1 {\n",
        "  background-color: pink;\n",
        "}\n",
-       "#T_23824_level0_col2 {\n",
+       "#T_fff20_level0_col2 {\n",
        "  background-color: skyblue;\n",
        "}\n",
-       "#T_23824_level0_col3 {\n",
+       "#T_fff20_level0_col3 {\n",
        "  background-color: lightgreen;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_23824\">\n",
+       "<table id=\"T_fff20\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_23824_level0_col0\" class=\"col_heading level0 col0\" >date</th>\n",
-       "      <th id=\"T_23824_level0_col1\" class=\"col_heading level0 col1\" >2021</th>\n",
-       "      <th id=\"T_23824_level0_col2\" class=\"col_heading level0 col2\" >2020</th>\n",
-       "      <th id=\"T_23824_level0_col3\" class=\"col_heading level0 col3\" >2019</th>\n",
+       "      <th id=\"T_fff20_level0_col0\" class=\"col_heading level0 col0\" >date</th>\n",
+       "      <th id=\"T_fff20_level0_col1\" class=\"col_heading level0 col1\" >2021</th>\n",
+       "      <th id=\"T_fff20_level0_col2\" class=\"col_heading level0 col2\" >2020</th>\n",
+       "      <th id=\"T_fff20_level0_col3\" class=\"col_heading level0 col3\" >2019</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_23824_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "      <td id=\"T_23824_row0_col0\" class=\"data row0 col0\" >2021-05-14 00:00:00</td>\n",
-       "      <td id=\"T_23824_row0_col1\" class=\"data row0 col1\" >1716561.000000</td>\n",
-       "      <td id=\"T_23824_row0_col2\" class=\"data row0 col2\" >250467</td>\n",
-       "      <td id=\"T_23824_row0_col3\" class=\"data row0 col3\" >2664549</td>\n",
+       "      <th id=\"T_fff20_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_fff20_row0_col0\" class=\"data row0 col0\" >2021-05-14 00:00:00</td>\n",
+       "      <td id=\"T_fff20_row0_col1\" class=\"data row0 col1\" >1716561.000000</td>\n",
+       "      <td id=\"T_fff20_row0_col2\" class=\"data row0 col2\" >250467</td>\n",
+       "      <td id=\"T_fff20_row0_col3\" class=\"data row0 col3\" >2664549</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_23824_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
-       "      <td id=\"T_23824_row1_col0\" class=\"data row1 col0\" >2021-05-13 00:00:00</td>\n",
-       "      <td id=\"T_23824_row1_col1\" class=\"data row1 col1\" >1743515.000000</td>\n",
-       "      <td id=\"T_23824_row1_col2\" class=\"data row1 col2\" >234928</td>\n",
-       "      <td id=\"T_23824_row1_col3\" class=\"data row1 col3\" >2611324</td>\n",
+       "      <th id=\"T_fff20_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_fff20_row1_col0\" class=\"data row1 col0\" >2021-05-13 00:00:00</td>\n",
+       "      <td id=\"T_fff20_row1_col1\" class=\"data row1 col1\" >1743515.000000</td>\n",
+       "      <td id=\"T_fff20_row1_col2\" class=\"data row1 col2\" >234928</td>\n",
+       "      <td id=\"T_fff20_row1_col3\" class=\"data row1 col3\" >2611324</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x11f6eb0e0>"
+       "<pandas.io.formats.style.Styler at 0x12590e930>"
       ]
      },
      "execution_count": 22,
@@ -3131,67 +3132,67 @@
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_ef5a8_row0_col1, #T_ef5a8_row0_col2, #T_ef5a8_row1_col1, #T_ef5a8_row1_col2 {\n",
+       "#T_5ca79_row0_col1, #T_5ca79_row0_col2, #T_5ca79_row1_col1, #T_5ca79_row1_col2 {\n",
        "  background-color: pink;\n",
        "}\n",
-       "#T_ef5a8_row2_col1, #T_ef5a8_row2_col2, #T_ef5a8_row3_col1, #T_ef5a8_row3_col2 {\n",
+       "#T_5ca79_row2_col1, #T_5ca79_row2_col2, #T_5ca79_row3_col1, #T_5ca79_row3_col2 {\n",
        "  background-color: skyblue;\n",
        "}\n",
-       "#T_ef5a8_row4_col1, #T_ef5a8_row4_col2, #T_ef5a8_row5_col1, #T_ef5a8_row5_col2 {\n",
+       "#T_5ca79_row4_col1, #T_5ca79_row4_col2, #T_5ca79_row5_col1, #T_5ca79_row5_col2 {\n",
        "  background-color: lightgreen;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_ef5a8\">\n",
+       "<table id=\"T_5ca79\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_ef5a8_level0_col0\" class=\"col_heading level0 col0\" >date</th>\n",
-       "      <th id=\"T_ef5a8_level0_col1\" class=\"col_heading level0 col1\" >year</th>\n",
-       "      <th id=\"T_ef5a8_level0_col2\" class=\"col_heading level0 col2\" >travelers</th>\n",
+       "      <th id=\"T_5ca79_level0_col0\" class=\"col_heading level0 col0\" >date</th>\n",
+       "      <th id=\"T_5ca79_level0_col1\" class=\"col_heading level0 col1\" >year</th>\n",
+       "      <th id=\"T_5ca79_level0_col2\" class=\"col_heading level0 col2\" >travelers</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_ef5a8_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "      <td id=\"T_ef5a8_row0_col0\" class=\"data row0 col0\" >2021-05-14 00:00:00</td>\n",
-       "      <td id=\"T_ef5a8_row0_col1\" class=\"data row0 col1\" >2021</td>\n",
-       "      <td id=\"T_ef5a8_row0_col2\" class=\"data row0 col2\" >1716561.000000</td>\n",
+       "      <th id=\"T_5ca79_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_5ca79_row0_col0\" class=\"data row0 col0\" >2021-05-14 00:00:00</td>\n",
+       "      <td id=\"T_5ca79_row0_col1\" class=\"data row0 col1\" >2021</td>\n",
+       "      <td id=\"T_5ca79_row0_col2\" class=\"data row0 col2\" >1716561.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_ef5a8_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
-       "      <td id=\"T_ef5a8_row1_col0\" class=\"data row1 col0\" >2021-05-13 00:00:00</td>\n",
-       "      <td id=\"T_ef5a8_row1_col1\" class=\"data row1 col1\" >2021</td>\n",
-       "      <td id=\"T_ef5a8_row1_col2\" class=\"data row1 col2\" >1743515.000000</td>\n",
+       "      <th id=\"T_5ca79_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_5ca79_row1_col0\" class=\"data row1 col0\" >2021-05-13 00:00:00</td>\n",
+       "      <td id=\"T_5ca79_row1_col1\" class=\"data row1 col1\" >2021</td>\n",
+       "      <td id=\"T_5ca79_row1_col2\" class=\"data row1 col2\" >1743515.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_ef5a8_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
-       "      <td id=\"T_ef5a8_row2_col0\" class=\"data row2 col0\" >2020-05-14 00:00:00</td>\n",
-       "      <td id=\"T_ef5a8_row2_col1\" class=\"data row2 col1\" >2020</td>\n",
-       "      <td id=\"T_ef5a8_row2_col2\" class=\"data row2 col2\" >250467.000000</td>\n",
+       "      <th id=\"T_5ca79_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
+       "      <td id=\"T_5ca79_row2_col0\" class=\"data row2 col0\" >2020-05-14 00:00:00</td>\n",
+       "      <td id=\"T_5ca79_row2_col1\" class=\"data row2 col1\" >2020</td>\n",
+       "      <td id=\"T_5ca79_row2_col2\" class=\"data row2 col2\" >250467.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_ef5a8_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
-       "      <td id=\"T_ef5a8_row3_col0\" class=\"data row3 col0\" >2020-05-13 00:00:00</td>\n",
-       "      <td id=\"T_ef5a8_row3_col1\" class=\"data row3 col1\" >2020</td>\n",
-       "      <td id=\"T_ef5a8_row3_col2\" class=\"data row3 col2\" >234928.000000</td>\n",
+       "      <th id=\"T_5ca79_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
+       "      <td id=\"T_5ca79_row3_col0\" class=\"data row3 col0\" >2020-05-13 00:00:00</td>\n",
+       "      <td id=\"T_5ca79_row3_col1\" class=\"data row3 col1\" >2020</td>\n",
+       "      <td id=\"T_5ca79_row3_col2\" class=\"data row3 col2\" >234928.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_ef5a8_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
-       "      <td id=\"T_ef5a8_row4_col0\" class=\"data row4 col0\" >2019-05-14 00:00:00</td>\n",
-       "      <td id=\"T_ef5a8_row4_col1\" class=\"data row4 col1\" >2019</td>\n",
-       "      <td id=\"T_ef5a8_row4_col2\" class=\"data row4 col2\" >2664549.000000</td>\n",
+       "      <th id=\"T_5ca79_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
+       "      <td id=\"T_5ca79_row4_col0\" class=\"data row4 col0\" >2019-05-14 00:00:00</td>\n",
+       "      <td id=\"T_5ca79_row4_col1\" class=\"data row4 col1\" >2019</td>\n",
+       "      <td id=\"T_5ca79_row4_col2\" class=\"data row4 col2\" >2664549.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_ef5a8_level0_row5\" class=\"row_heading level0 row5\" >5</th>\n",
-       "      <td id=\"T_ef5a8_row5_col0\" class=\"data row5 col0\" >2019-05-13 00:00:00</td>\n",
-       "      <td id=\"T_ef5a8_row5_col1\" class=\"data row5 col1\" >2019</td>\n",
-       "      <td id=\"T_ef5a8_row5_col2\" class=\"data row5 col2\" >2611324.000000</td>\n",
+       "      <th id=\"T_5ca79_level0_row5\" class=\"row_heading level0 row5\" >5</th>\n",
+       "      <td id=\"T_5ca79_row5_col0\" class=\"data row5 col0\" >2019-05-13 00:00:00</td>\n",
+       "      <td id=\"T_5ca79_row5_col1\" class=\"data row5 col1\" >2019</td>\n",
+       "      <td id=\"T_5ca79_row5_col2\" class=\"data row5 col2\" >2611324.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x11f4e29c0>"
+       "<pandas.io.formats.style.Styler at 0x1365fc3e0>"
       ]
      },
      "execution_count": 23,
@@ -4733,7 +4734,7 @@
     ]
    },
    "source": [
-    "Next, we group together Christmas Eve and Christmas Day, likewise for New Year's Eve and New Year's Day, and create the pivot table:"
+    "Next, we group together Christmas Eve and Christmas Day, likewise for New Year's Eve and New Year's Day (handling for the change in year), and create the pivot table:"
    ]
   },
   {
@@ -4790,14 +4791,24 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>2018</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4,471,501</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4,471,501</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>2019</th>\n",
        "      <td>11,524,228</td>\n",
        "      <td>9,414,228</td>\n",
        "      <td>8,314,811</td>\n",
        "      <td>9,720,691</td>\n",
-       "      <td>11,006,965</td>\n",
+       "      <td>11,025,852</td>\n",
        "      <td>9,090,478</td>\n",
-       "      <td>59,071,401</td>\n",
+       "      <td>59,090,288</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020</th>\n",
@@ -4805,19 +4816,9 @@
        "      <td>2,682,541</td>\n",
        "      <td>2,993,653</td>\n",
        "      <td>1,126,253</td>\n",
-       "      <td>7,547,837</td>\n",
+       "      <td>5,056,320</td>\n",
        "      <td>3,364,358</td>\n",
-       "      <td>22,489,694</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1,998,871</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1,998,871</td>\n",
+       "      <td>19,998,177</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Total</th>\n",
@@ -4836,16 +4837,16 @@
       "text/plain": [
        "holiday  Christmas   July 4th  Labor Day  Memorial Day  New Year's  \\\n",
        "year                                                                 \n",
-       "2019    11,524,228  9,414,228  8,314,811     9,720,691  11,006,965   \n",
-       "2020     4,775,052  2,682,541  2,993,653     1,126,253   7,547,837   \n",
-       "2021           NaN        NaN        NaN           NaN   1,998,871   \n",
+       "2018           NaN        NaN        NaN           NaN   4,471,501   \n",
+       "2019    11,524,228  9,414,228  8,314,811     9,720,691  11,025,852   \n",
+       "2020     4,775,052  2,682,541  2,993,653     1,126,253   5,056,320   \n",
        "Total   16,299,280 12,096,769 11,308,464    10,846,944  20,553,673   \n",
        "\n",
        "holiday  Thanksgiving      Total  \n",
        "year                              \n",
-       "2019        9,090,478 59,071,401  \n",
-       "2020        3,364,358 22,489,694  \n",
-       "2021              NaN  1,998,871  \n",
+       "2018              NaN  4,471,501  \n",
+       "2019        9,090,478 59,090,288  \n",
+       "2020        3,364,358 19,998,177  \n",
        "Total      12,454,836 83,559,966  "
       ]
      },
@@ -4858,6 +4859,9 @@
     "import numpy as np\n",
     "\n",
     "tsa_melted_holiday_travel.assign(\n",
+    "    year=lambda x: np.where(\n",
+    "        x.holiday == \"New Year's Day\", pd.to_numeric(x.year) - 1, x.year\n",
+    "    ).astype(str),\n",
     "    holiday=lambda x: np.where(\n",
     "        x.holiday.str.contains('Christmas|New Year', regex=True), \n",
     "        x.holiday.str.replace('Day|Eve', '', regex=True).str.strip(), \n",
